[package]
name = "safe-once-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["sync", "parking_lot", "rt", "macros"] }
parking_lot = "0.12.1"
futures = "0.3.27"

[dev-dependencies]
tokio = { version = "1.26.0", features = [] }
ondrop = "0.1.0"
