[package]
name = "safe-once-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["sync", "parking_lot", "macros"] }
parking_lot = "0.12.3"
futures = "0.3.30"
pin-project = "1"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["rt"] }
ondrop = "0.1.0"

[features]
tokio-rt = ["tokio/rt"]